--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "ictt-teleporter-usdc-native-bridge",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+  "license": "MIT",
+  "description": "A USDC native bridge using ICTT Teleporter",
+  "author": "Chris Fusillo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/XKOVA/ictt-teleporter-usdc-native-bridge.git"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,22 +15,18 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "ethers": "^5.7.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
